# myRPC

./: .gitignore  CMakeLists.txt  README.md  bench_rpc.py
bench/: cpp_bench_client.cpp  profile_perf.sh  run_bench.sh  run_suite.py
bench/cases/: echo_large_payload.sh  echo_small_payload.sh  reconnect_vs_reuse.sh
bench/results/: sample_results.md
bench/results/20260422-002612-baseline/: metadata.json  raw_runs.json  report.md  summary.csv
bench/results/20260422-013156-metrics-baseline/: measurements.csv  metadata.json  method_metrics.csv  metrics_timeseries.csv  plot_series.csv  report.md  summary.csv
bench/results/20260422-013156-metrics-baseline/raw/: metrics_snapshots.json  raw_runs.json
bench/results/20260422-013156-metrics-baseline/raw/metrics_prom/: payload__io8__conn200__payload16.repeat1.metrics.prom  payload__io8__conn200__payload16.repeat2.metrics.prom  payload__io8__conn200__payload16.repeat3.metrics.prom  payload__io8__conn200__payload16.warmup.metrics.prom  (+48 more)
docs/: architecture.md  benchmark.md  perf_journal.md  protocol.md
examples/: simple_client.cpp
include/client/: rpc_client.h
include/codec/: rpc_codec.h  rpc_message.h  rpc_serialization.h
include/connection/: connection.h
include/dispatcher/: rpc_dispatcher.h
include/observability/: observability.h
include/server/: server.h  socket_utils.h
include/worker/: worker_pool.h
scripts/: bench_python.py
src/: connection.cpp  connection.h  main.cpp  rpc_codec.cpp  rpc_codec.h  rpc_dispatcher.cpp  rpc_dispatcher.h  server.cpp  server.h  session.cpp  session.h  socket_utils.cpp  socket_utils.h  worker_pool.cpp
src/client/: rpc_client.cpp
src/codec/: rpc_codec.cpp  rpc_serialization.cpp
src/connection/: connection.cpp
src/dispatcher/: rpc_dispatcher.cpp
src/observability/: observability.cpp
src/server/: main.cpp  server.cpp  socket_utils.cpp
src/worker/: worker_pool.cpp
